--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,12 @@ test:
   <<: *default
   database: db/test.sqlite3
 
+#production:
+# «: *default
+#  database: db/production.sqlite3
+
 production:
-  <<: *default
-  database: db/production.sqlite3
+«: *default
+database: postgresql-corrugated-23696_production
+username: postgresql-corrugated-23696
+password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
